--- a/public/global.css
+++ b/public/global.css
@@ -1,15 +1,16 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
-html, body {
-	width: 100%;
-	height: 100%;
-	color: #212529;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  color: #212529;
 }
 
 .btn {
@@ -58,8 +59,37 @@ html, body {
   border-radius: 0.25rem;
 }
 
+.panel-light {
+  background-color: #fff;
+  border-color: rgba(0, 0, 0, 0.125);
+}
+
 .panel-dark {
   color: #1b1e21;
   background-color: #d6d8d9;
   border-color: #c6c8ca;
+}
+
+.tooltip-paragraph {
+  margin-bottom: 1rem;
+  font-size: 0.875rem;
+}
+
+.tooltip-paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.tooltip-card-symbol {
+  display: inline-flex;
+  place-content: center;
+  border: 1px solid #c6c8ca;
+  background-color: #d6d8d9;
+  border-radius: 0.2rem;
+  padding: 0 0.2rem;
+  font-size: 0.875rem;
+}
+
+.tooltip-score {
+  font-size: 0.875rem;
+  font-weight: bold;
 }
